fix accomondation padding and alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,13 @@
 body {
-  background-color: black;
+  background-image: url(../img/background.gif);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .container {
   text-align: center;
   display: inline-block;
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(255, 255, 255, 0.75);
   height: 1000px;
   border-radius: 10%;
   padding: 0px 10px;
@@ -20,7 +22,16 @@ body {
   width: 400px;
 }
 
+.rooms img {
+  padding: 35px;
+  padding-top: 40px;
+  align-content: center;
+  height: 250px;
+  width: 400px;
+}
+
 .menu {
+  text-align: center;
   float: left;
   display: inline-block;
   background-color: white;
